# OpenWARP

./: .buildinfo  .gitignore  NOTICE  OpenWARP.sublime-workspace  README.md  acknowledgments.html  doc.html  down_and_inst.html  genindex.html  index.html  issues.html  license.html  lisense.html  objects.inv  params.json  search.html  searchindex.js
Contest_Output/: README.txt
Contest_Output/Add_Logging/: changes.txt
Contest_Output/Python_CLI/: README.txt
Contest_Output/Wave_Frequency_Crash_Bug/: OPENWARP - FIX WAVE FREQUENCY AND DIRECTION CRASH BUG.docx
_sources/: acknowledgments.txt  down_and_inst.txt  index.txt  issues.txt  license.txt
doc/deployment_documentation/latex_src/: OPENWARP_DEPLOYMENT_GUIDE.dvi  OPENWARP_DEPLOYMENT_GUIDE.out  OPENWARP_DEPLOYMENT_GUIDE.tex  OPENWARP_DEPLOYMENT_GUIDE.toc
doc/sphinx/: Makefile  make.bat  push_doc.sh
doc/sphinx/source/: OpenWARP.bib  acknowledgments.rst  conf.py  doc.rst  index.rst  issues.rst
doc/theory_documentation/sphinx/: view.sh
doc/top_coder_documentation/: OpenWARP - Installer Build Guide.docx  OpenWarp _ ECN Documentation and Theory.pdf.docx
install_script/: installer.bat  installer.sh
install_script/blas/x64/: libblas.lib
install_script/hdf5/: README.txt
install_script/lapack/win32/: liblapack.lib
installers/: README.md
source/: README.txt  installer.sh  run.bat  run.sh  testscript_1.bat  testscript_1.sh  testscript_2.bat  testscript_2.sh
source/NemohImproved/: Changelogs.txt  README.txt  finalfix.txt
source/NemohImproved/Nemoh/: .cproject  .gitignore  .project  CMakeLists.txt  Changelog.txt  UPDATES.txt  User manual.doc
source/NemohImproved/Nemoh/Mesh/: Netting.f90  hydre.f90  mesh.f90
source/NemohImproved/Nemoh/Solver/: NEMOH.f90
source/NemohImproved/Nemoh/Solver/Core/: ALLOCATE_DATA.f90  Bodyconditions.f90  COMMON_TYPE.f90  COMPUTE_GREEN_FD.f90  COMPUTE_GREEN_FREESURFACE.f90  COMPUTE_GREEN_INFD.f90  COMPUTE_INFLUENCE_ODE.f90  COMPUTE_KOCHIN.f90  COMPUTE_MEAN_DRIFT_FORCES_FIN.f90  COMPUTE_MEAN_DRIFT_FORCES_INF.f90  COMPUTE_POTENTIAL_DOMAIN.f90  COMPUTE_YAW_MOMENT_FIN.f90  COMPUTE_YAW_MOMENT_INF.f90  COM_VAR.f90  DEALLOCATE_DATA.f90  ELEMENTARY_FNS.f90  GMRES.f90  GREEN_FUNCTION.f90  Gaussm3.f90  INITIALIZATION.f90  MESH_STATISTICS.f90  M_SOLVER.f90  ODE.f90  OUTPUT.f90  PREPARE_MESH.f90  SOLVE_BEM.f90  SOLVE_BEM_DIPOLES_THIN.f90  SOLVE_BEM_FD_DIRECT.f90  SOLVE_BEM_FD_ITERATIVE.f90  SOLVE_BEM_HIGH.f90  SOLVE_BEM_INFD_DIRECT.f90  SOLVE_BEM_INFD_ITERATIVE.f90  SOLVE_BEM_IRREGULAR.f90  UTILITY.f90
source/NemohImproved/Nemoh/Solver/logging/: flogging.F90  logging.h  vt100.F90
source/NemohImproved/Nemoh/Verification/: compare.py
source/NemohImproved/Nemoh/Verification/cylinder/: nemohstat.py
source/NemohImproved/Nemoh/Verification/gmresVSgauss/: M_SOLVER.f90  USAGE.txt  gmresvsgauss.f90
source/NemohImproved/Nemoh/Verification/nonsymmetrical/: input.txt
source/NemohImproved/Nemoh/commonFiles/: Bodyconditions.f90  Environment.f90  Identification.f90  Mesh.f90  Results.f90
source/NemohImproved/Nemoh/gfortranBuild/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.unix  Makefile.win  cmake_install.cmake
source/NemohImproved/Nemoh/matlabRoutines/: Mesh.m  Nemoh.m  axiMesh.m
source/NemohImproved/Nemoh/postProcessor/: Compute_RAOs.f90  IRF.f90  Main.f90  Plot_WaveElevation.f90
source/NemohImproved/Nemoh/preProcessor/: BodyConditions.f90  Integration.f90  Main.f90  Mesh.f90
source/NemohImproved/docs/: DipolesImplementationDetails.doc  HDF5 Input and Output Implementation for NEMOH.doc  Refine Tabulation of the Green Function of BEM code Nemoh.doc
source/NemohImproved/test/: simpson.py
source/automated_test/: __init__.py
source/automated_test/Test1/: GDFMesh.py  GDFtoDAT.py  README  mesh.py
source/automated_test/Test10/: cylinder.json
source/automated_test/Test11/: nonsymmetrical.json
source/automated_test/Test2/: OUTtoHDF5.py  test2.json
source/automated_test/Test3/: test11.json  test13.json
source/automated_test/Test4/: test4.json
source/automated_test/Test5/: test5.json
source/automated_test/Test6/: test6.json
source/automated_test/Test7/: test7_false.json
source/automated_test/Test8/: test8_negative.json
source/automated_test/Test9/: 2bodies.json
source/automated_test/testruns/: README.txt  README_110928_test_run_inputs.txt  config.wam  test01.frc  test01.gdf  test01a.frc  test02.cfg  test02.frc  test02.gdf  test02.pot  test03.gdf  test03.pot  test04.frc  test04.gdf  test04.wam  test05.frc  test05.gdf  test05.pot  test05.wam  test05a.frc  test05a.gdf  test05a.wam  test05c.gdf  test05s.frc  test05s.gdf  test06.cfg  test06.frc  test06.gdf  test06.pot  test07.gdf  test07.pot  test07.wam  test08.pot  test08.wam  test09.gdf  test09.wam  test09a.cfg  test09a.frc  test09a.gdf  test09a.pot  (+78 more)
source/docs/Nemoh/: Code Acceleration of the Calculation of Influence Coefficients of Nemoh.doc  Dipoles Implementation in NEMOH.doc  Drift forces and QTF Implementation of Nemoh.doc  Implementation of Higher Order Panel Methods.doc  Irregular Frequencies Assembly.doc
source/docs/OpenWarp/: OpenWarp - Meshing and Simulation Assembly Deployment Guide.doc
source/openwarpgui/: main.py  openwarp_cli.py  requirements.txt
source/openwarpgui/bundled/: README.md
source/openwarpgui/bundled/mesh-generator/src/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshStats.cpp  MeshStats.h  ReadMe.txt  Vector.cpp  Vector.h  nglib-mesh.cpp  nglib-mesh.h  stdafx.cpp  stdafx.h  targetver.h
source/openwarpgui/configs/: default_configuration.json
source/openwarpgui/nemoh/: export_tec.py  logging.json  models.py  postprocessor.py  preprocessor.py  requirements.txt  settings.py  setup.py  solver.py  solver_fortran.c  solver_fortran.pyd  solver_fortran.pyx  structure.py  utility.py
source/openwarpgui/openwarp/: __init__.py  helper.py  requirements.txt  services.py  settings.py  web.py
source/openwarpgui/static/: bye.html  index.html  screens.html
source/openwarpgui/test_files/: compare.py  nemohstat.py
source/test_files/mesh/: FlapSingle.igs  FlapSingle.step  FlapSingle.stl  config.txt  (+2 more)
(+3027 files in other folders)
